# SDLEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SDL-basedEngine.sln  SDLGame.sln
Classes/: InitialScene.cpp  InitialScene.h
Classes/include/: Game.h
Classes/include/Core/: GlobalDefines.h  Logger.h  Vec2.h
Classes/include/Input/: EventHandler.h  KeyboardEventHolder.h  MouseEventHolder.h
Classes/include/Managers/: Keeper.h  SceneManager.h  TextureManager.h  WindowManager.h
Classes/include/Objects/: AnimatedSprite.h  Camera.h  Node.h  Scene.h  Sprite.h  TextLabel.h  Updatable.h
Classes/src/: Game.cpp
Classes/src/Core/: Vec2.inl
Classes/src/Input/: EventHandler.cpp  KeyboardEventHolder.cpp  MouseEventHolder.cpp
Classes/src/Managers/: Keeper.cpp  SceneManager.cpp  TextureManager.cpp  WindowManager.cpp
Classes/src/Objects/: AnimatedSprite.cpp  Camera.cpp  Node.cpp  Scene.cpp  Sprite.cpp  TextLabel.cpp
Resources/: engine_config.json
SDL-basedEngine/: SDL-basedEngine.vcxproj  SDL-basedEngine.vcxproj.filters  main.cpp
SDL-basedEngine/Lib/: SDL-basedEngine.idb
SDL-basedEngine/Lib/SDL-basedEngine.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SDL-basedEngine.lastbuildstate  lib.command.1.tlog
SDL-basedEngine/Test/: SDL-basedEngine.idb
SDL-basedEngine/Test/SDL-basedEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  SDL-basedEngine.lastbuildstate  lib.command.1.tlog
SDLGame/: SDLGame.vcxproj  SDLGame.vcxproj.filters  main.cpp  packages.config
Source/Settings/: CMakeLists.txt
Source/Settings/private/: EngineSettings.cpp  WindowSettings.cpp
Source/Settings/public/: EngineSettings.h  Extractor.h  WindowSettings.h
Source/private/: Game.cpp
Source/private/Controllers/: Button.cpp
Source/private/Input/: EventHandler.cpp  KeyboardEventHolder.cpp  MouseEventHolder.cpp  TouchFingerEventHolder.cpp
Source/private/Managers/: Keeper.cpp  SceneManager.cpp  TextureManager.cpp  WindowManager.cpp
Source/private/Objects/: AnimatedSprite.cpp  Camera.cpp  Node.cpp  Scene.cpp  Sprite.cpp  SpriteButton.cpp  TextLabel.cpp
Source/public/: Game.h
Source/public/Controllers/: Button.h
Source/public/Core/: GlobalDefines.h  Logger.h  Vec2.h
Source/public/Input/: EventHandler.h  KeyboardEventHolder.h  MouseEventHolder.h  TouchFingerEventHolder.h
Source/public/Managers/: Keeper.h  SceneManager.h  TextureManager.h  WindowManager.h
Source/public/Objects/: AnimatedSprite.h  Camera.h  Node.h  Scene.h  Sprite.h  SpriteButton.h  TextLabel.h  Updatable.h
Windows/gTest/libs/: gtest_maind.lib
Windows/gTest/libs/gtest/: gtest.idb
Windows/gTest/libs/gtest/gtest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  gtest.lastbuildstate  lib.command.1.tlog
Windows/gTest/libs/gtest_main/: gtest_main.idb
Windows/gTest/libs/gtest_main/gtest_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
Windows/gTest/libs/gtest_prod_test/: vc140.idb
Windows/gTest/libs/gtest_prod_test/gtest_prod_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Windows/gTest/libs/gtest_unittest/: vc140.idb
Windows/gTest/libs/gtest_unittest/gtest_unittest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
gTest/: Vec2Test.cpp  gTest.vcxproj  gTest.vcxproj.filters
gTest/Sources/: NodeTest.cpp  SceneManagerTest.cpp
gTest/Sources/Objects/: NodeTest.cpp
gTest/Test/: vc140.idb
gTest/Test/gTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
